# Health-Care-deepsearch-AI-Agent-Orchestration

./: README.md
backend/: .gitignore  README.md  clients.py  lead_agent.py  main.py  pyproject.toml  support_conversations.db  test.db  test.db-shm  test.db-wal  tools.py  user_settings.json
front-end/: package-lock.json  package.json
front-end/src/app/: layout.tsx
front-end/src/app/Dashboard/: page.tsx
front-end/src/app/login/: page.tsx
front-end/src/app/signup/: page.tsx
front-end/src/components/: main_form.tsx  message_box.tsx
front-end/src/context/: context.tsx
