[project]
name = "deepsearch-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "openai==1.98.0",
    "openai-agents>=0.2.5",
    "tavily-python>=0.7.10",
    "websockets>=15.0.1",
]
